[package]
name = "rust-longan-dac"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2018"

[dependencies]
r0 = "0.2.2"
panic-abort = "0.3.1"
longan-nano = "0.1.1"
gd32vf103xx-hal = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.5.4"
st7735-lcd = { version = "0.6.1", optional = true }
riscv-rt = "0.6.1"
panic-halt = "0.2.0"
embedded-graphics = "0.5"

[profile.release]
opt-level = 'z'  # Optimize for size.